--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ margin-top: 2rem;
     margin-top: 1rem;  
 } 
   
-  .btn-two {
+  .btn-two5 {
     background-color: #007bff;
     color: #fff;
     padding: 12px 30px;
@@ -3406,7 +3406,7 @@ height: 100%;
     margin-top: 4rem;
 }
 .sec13-box1{
-
+margin-top: 1rem;
    
 }
 .sec13-box2{
@@ -3682,182 +3682,192 @@ height: 100%;
 
     /* 13 container */
 
-    .section14{
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        margin-top: 8rem;
-        margin-bottom: 4rem;
-       }
-       .sec14-frist{
-       gap: 20px;
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+   .section14{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 8rem;
+    margin-bottom: 4rem;
+   }
+   .sec14-frist{
+   gap: 20px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+   }
+   .sec14-text{
+    font-size: 24px;
+    font-family: Inter Tight;
+    font-weight: 400;
+    line-height: 36px;
+    color: #FFFFFF;
+   }
+   .sec14-heading{
+    font-size: 70px;
+    font-family: Inter Tight;
+    font-weight: 700;
+    line-height: 80px;
+    color: #FFFFFF;
+    width: 1098.36px;
+    margin-top: 2rem;
+   }
+   .sec14-iconcontent{
+    display: grid;
+    gap: 10px;
+   }
+   .sec14-formcontainer {
+    width: 90%;
+   margin-top: 4rem;
+  
+    padding: 20px;
+}
+.form-row1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+   
+}
+.form-row1 input {
+    width: 32%;
+   padding-bottom: 30px;
+    border: none; /* Remove all borders */
+    border-bottom: 1px solid #ffffff; /* Apply bottom border */
+    background-color: #000;
+    color: #ffffff;
+    outline: none;
+    border-radius: 0px;
+    text-align: left;
+    font-family: Inter Tight;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
     
-       }
-       .sec14-text{
-        font-size: 24px;
+}
+.form-row1 textarea {
+    width: 100%;
+    padding: 10px;
+    height: 150px;
+    border: none; /* Remove all borders */
+    border-bottom: 1px solid #ffffff; /* Add only the bottom border */
+    background-color: #000;
+    color: #ffffff;
+    outline: none;
+    border-radius: 0px;
+    text-align: left;
+    font-family: Inter Tight;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+}
+
+.submit-btn-14 {
+    background-color: #007bff;
+        border: none;
+        padding: 10px 30px;
+        color: #ffffff;
+     margin-top: 2rem;
+        cursor: pointer;
+        border-radius: 30px;
         font-family: Inter Tight;
-        font-weight: 400;
+        font-size: 18px;
         line-height: 36px;
-        color: #FFFFFF;
+   
+}
+   @media (max-width:1372px) {
+    .sec14-heading{
+        font-size: 60px;
+        line-height: 70px;
+        width: 850px;
+       
        }
-       .sec14-heading{
-        font-size: 90px;
-        font-family: Inter Tight;
-        font-weight: 700;
-        line-height: 100px;
-        color: #FFFFFF;
-        width: 1098.36px;
-        margin-top: 2rem;
+   }
+   @media (max-width:1082px) {
+    .sec14-heading{
+        font-size: 40px;
+        line-height: 50px;
+        width: 800px;
+       
        }
-       .sec14-iconcontent{
-        display: grid;
-        gap: 10px;
+   }
+   @media (max-width:925px) {
+    .sec14-heading{
+        font-size: 25px;
+        line-height: 35px;
+        width: 400px;
        }
-       .sec14-formcontainer {
-        width: 90%;
-       margin-top: 4rem;
       
-        padding: 20px;
-    }
+   }
+ 
+   @media (max-width:815px) {
     .form-row1 {
         display: flex;
         justify-content: space-between;
         margin-bottom: 15px;
-    }
-    .form-row1 input {
-        width: 32%;
-       padding-bottom: 30px;
-        border: none; /* Remove all borders */
-        border-bottom: 1px solid #ffffff; /* Apply bottom border */
-        background-color: #000;
-        color: #ffffff;
-        outline: none;
-        border-radius: 0px;
-        text-align: left;
-        font-family: Inter Tight;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 36px;
-        
-    }
-    .form-row1 textarea {
-        width: 100%;
-        padding: 10px;
-        height: 150px;
-        border: none; /* Remove all borders */
-        border-bottom: 1px solid #ffffff; /* Add only the bottom border */
-        background-color: #000;
-        color: #ffffff;
-        outline: none;
-        border-radius: 0px;
-        text-align: left;
-        font-family: Inter Tight;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 36px;
-    }
-    .submit-btn-14 {
-        background-color: #007bff;
-            border: none;
-            padding: 10px 30px;
-            color: #ffffff;
-         margin-top: 2rem;
-            cursor: pointer;
-            border-radius: 30px;
-            font-family: Inter Tight;
-            font-size: 18px;
-            line-height: 36px;
+        flex-direction: column;
        
     }
-       @media (max-width:1372px) {
-        .sec14-heading{
-            font-size: 60px;
-            line-height: 70px;
-            width: 800px;
-           }
+    .form-row1 input {
+        width: 100%;
        }
-       @media (max-width:925px) {
-        .sec14-heading{
-            font-size: 40px;
-            line-height: 50px;
-            width: 400px;
-           }
-          
+   }
+   @media (max-width:525px) {
+    .sec14-heading{
+        font-size: 20px;
+        line-height: 25px;
+        width: 254px;
        }
-       @media (max-width:815px) {
-        .form-row1 {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 15px;
-            flex-direction: column;
-           
-        }
-        .form-row1 input {
-            width: 100%;
-            margin-top: 1.3rem;
+       .sec14-text{
+        font-size: 15px;
+       }
+       .sec14-formcontainer {
+        margin-top: 2rem;
+       }
+       .form-row1 input{
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 36px;
+       }
+       .form-row1 textarea {
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 36px;
+       }
+       .bnt-sec14 {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+      
+       }
+       .submit-btn-14 {
+        background-color: #007bff;
+        border: none;
+        padding: 10px 30px;
+        color: #ffffff;
+     margin-top: 2rem;
+        cursor: pointer;
+        border-radius: 30px;
+        font-family: Inter Tight;
+        font-size: 18px;
+        line-height: 36px;
+       
+    }
+    .section14{
+        margin-top: 3rem;
+        margin-bottom: 1rem;
+       }
+   }
+   @media (max-width:363px) {
+    .sec14-heading{
+        font-size: 21px;
+        line-height: 25px;
+        width: 214px;
+       }
+   }
 
-           }
-       }
-       @media (max-width:525px) {
-        .sec14-heading{
-            font-size: 25px;
-            line-height: 25px;
-            width: 254px;
-           }
-           .sec14-text{
-            font-size: 20px;
-           }
-           .sec14-formcontainer {
-            margin-top: 2rem;
-           }
-           .form-row1 input{
-            font-size: 24px;
-            font-weight: 400;
-            line-height: 36px;
-           }
-           .form-row1 textarea {
-            font-size: 24px;
-            font-weight: 400;
-            line-height: 36px;
-           }
-           .bnt-sec14 {
-            justify-content: center;
-            align-items: center;
-            display: flex;
-          
-           }
-           .submit-btn-14 {
-            background-color: #007bff;
-            border: none;
-            padding: 10px 30px;
-            color: #ffffff;
-         margin-top: 2rem;
-            cursor: pointer;
-            border-radius: 30px;
-            font-family: Inter Tight;
-            font-size: 18px;
-            line-height: 36px;
-           
-        }
-        .section14{
-            margin-top: 3rem;
-            margin-bottom: 1rem;
-           }
-       }
-       @media (max-width:363px) {
-        .sec14-heading{
-            font-size: 21px;
-            line-height: 25px;
-            width: 214px;
-           }
-       }
-    
     
     
    /* faq styling */
@@ -4410,7 +4420,7 @@ width: 583px;
     flex-direction: column;
     align-items: center;
     width: 100%;
-background-image: url('assets/17bacraound.svg');
+background-image: url('assets/19pngsd.svg');
 background-size:100%;
 background-position: center;
 background-repeat: no-repeat; 
@@ -5027,113 +5037,59 @@ margin-top: 10px;
 
 
 
-
-.popup-form {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-
-  .form-container {
-    background: linear-gradient(to bottom, #1e3a8a, #2563eb);
-    padding: 20px;
-    border-radius: 10px;
-    width: 500px;
-    color: #fff;
-  }
-
-  .f1-text{
-    margin-bottom: 10px;
-    font-family: Inter Tight;
-font-size: 32px;
-font-weight: 700;
-line-height: 38.72px;
-text-align: center;
-width: 95%;
-
-
-  }
-  .f2-text{
-    font-family: Inter Tight;
-font-size: 14px;
-font-weight: 400;
-line-height: 16.94px;
-text-align: center;
-margin-bottom: 1rem;
-
-  }
-  .f3-text{
-    font-family: Inter Tight;
-font-size: 16px;
-font-weight: 700;
-line-height: 14px;
-letter-spacing: 0.015em;
-
-
-
-  }
-  .form-container input, .form-container select, .form-container textarea {
-    width: 100%;
-    /* margin: 10px 0; */
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin-bottom: 15px;
-  }
-  .form-container1 {
-    display: flex; /* Enable flex layout for the container */
-    justify-content: flex-end; /* Push items to the right */
-}
-  .lastbutton {
-    display: block;
-      width: 100%;
-      background-color: #007BFF;
-      color: #fff;
-      border: none;
-      padding: 10px;
-      border-radius: 5px;
-      cursor: pointer;
-  
-  }
-  .startbutton{
-    display: block;
-    border: none;
-    border-radius: 35px;
-    cursor: pointer;
-    justify-content: right;
-    align-items: flex-end;
-    display: flex;
-  }
-
-  .form-container button:hover {
-    background-color: #0056b3;
-  }
-
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    background: none;
-    border: none;
-    color: #fff;
-    cursor: pointer;
-  }
-  @media (max-width:553px) {
-    .form-container {
+    .popup-form {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        justify-content: center;
+        /* align-items: center; */
+        z-index: 1000;
+        overflow-y: auto;
+      }
+      .form-container {
         background: linear-gradient(to bottom, #1e3a8a, #2563eb);
         padding: 20px;
         border-radius: 10px;
-        width: 90%;
+        width: 500px;
+        height: 730px;
+    
         color: #fff;
       }
+    
+      /* .form-container {
+        background: linear-gradient(to bottom, #1e3a8a, #2563eb);
+        padding: 20px;
+        border-radius: 10px;
+        width: 500px;
+        color: #fff;
+        max-height: 90vh; 
+        overflow-y: auto;
+    }
+    
+    
+    .form-container::-webkit-scrollbar {
+        width: 5px; 
+    }
+    
+    .form-container::-webkit-scrollbar-thumb {
+        background: #2563eb; 
+        border-radius: 10px; 
+    }
+    
+    .form-container::-webkit-scrollbar-thumb:hover {
+        background: #1e3a8a; 
+    }
+    
+    .form-container::-webkit-scrollbar-track {
+        background: #020280; 
+        border-radius: 10px;
+    }
+       */
+    
       .f1-text{
         margin-bottom: 10px;
         font-family: Inter Tight;
@@ -5149,21 +5105,285 @@ letter-spacing: 0.015em;
         font-family: Inter Tight;
     font-size: 10px;
     font-weight: 400;
-    line-height: 15.94px;
+    line-height: 10.94px;
     text-align: center;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    
     
       }
       .f3-text{
         font-family: Inter Tight;
-    font-size: 13px;
-    font-weight: 600;
-    line-height: 14px;
+    font-size: 11px;
+    font-weight: 700;
+    line-height: 11px;
     letter-spacing: 0.015em;
     
     
     
       }
-  }
-
-
+      
+    
+      .form-container input, .form-container select, .form-container textarea {
+        width: 100%;
+        /* margin: 10px 0; */
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        margin-bottom: 15px;
+      }
+      .form-container1 {
+        display: flex; /* Enable flex layout for the container */
+        justify-content: flex-end; /* Push items to the right */
+    }
+      .lastbutton {
+        display: block;
+          width: 100%;
+          background-color: #007BFF;
+          color: #fff;
+          border: none;
+          padding: 10px;
+          border-radius: 5px;
+          cursor: pointer;
+      
+      }
+      .startbutton{
+        display: block;
+        border: none;
+        border-radius: 35px;
+        cursor: pointer;
+        justify-content: right;
+        align-items: flex-end;
+        display: flex;
+      }
+    
+      .form-container button:hover {
+        background-color: #0056b3;
+      }
+    
+      .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 20px;
+        background: none;
+        border: none;
+        color: #fff;
+        cursor: pointer;
+      }
+      @media (max-width:553px) {
+        .form-container {
+            background: linear-gradient(to bottom, #1e3a8a, #2563eb);
+            padding: 20px;
+            border-radius: 10px;
+            width: 90%;
+            color: #fff;
+          }
+          .f1-text{
+            margin-bottom: 10px;
+            font-family: Inter Tight;
+        font-size: 22px;
+        font-weight: 600;
+        line-height: 25.72px;
+        text-align: center;
+        width: 95%;
+        
+        
+          }
+          .f2-text{
+            font-family: Inter Tight;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 15.94px;
+        text-align: center;
+        margin-bottom: 1rem;
+        
+          }
+          .f3-text{
+            font-family: Inter Tight;
+        font-size: 10px;
+        font-weight: 600;
+        line-height: 10px;
+        letter-spacing: 0.015em;
+        
+        
+        
+          }
+      }
+    
+    
+      .formcontainer {
+        background-color: #f9fbff;
+        padding: 20px;
+        border-radius: 12px;
+        width: 60%;
+        margin: 0 auto;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 1rem;
+      }
+      .form-print{
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+      }
+      
+      .form-heading {
+        color: #0F68EA;
+        font-size: 32px;
+        margin-bottom: 10px;
+        font-weight: 700;
+        line-height: 40px;
+        font-family: Inter Tight;
+      }
+      
+      .form-text {
+        color: #111827;
+        font-size: 14px;
+        margin-bottom: 20px;
+        font-family: Inter Tight;
+        font-weight: 500;
+        line-height: 17.5px;
+        text-align: center;
+        width: 534px;
+      }
+      
+      .form-row {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 15px;
+        
+        text-align: left;
+      }
+      .form-1more{
+        display: flex;
+        justify-content: space-between;
+       gap: 20px;
+        flex-direction: column;
+        text-align: left;
+        width: 48%;
+    
+      }
+      
+      .form-group {
+        flex-basis: 48%;
+     
+      }
+      
+      label { 
+        margin-bottom: 5px;
+      font-size:14px ;
+      font-family: Inter Tight;
+      line-height: 21px;
+      font-weight: 700;
+      
+      }
+      
+      input,  select, textarea {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #F6F9FF;
+        border-radius: 8px;
+        background-color: #EEF4FF;
+        font-size: 17.68px;
+        font-family: Inter Tight;
+        font-weight: 500;
+        color: #C8C8C8;
+        
+      }
+      
+      .phone-input {
+        display: flex;
+     
+     
+        border: 1px solid #F6F9FF;
+        border-radius: 8px;
+        background-color: #EEF4FF;
+      }
+      .phone-input select{
+    border: none;
+    border-radius: 8px;
+    border: 1px solid #F6F9FF;
+    background-color: transparent;
+    width: 90px;
+    color: #000000;
+    
+      }
+      .form-group select{
+        color: #000000;
+    
+      }
+      .custom-select {
+        position: relative;
+        display: flex;
+        align-items: center;
+       
+    }
+    .custom-select select {
+        appearance: none;
+    }
+    .custom-select svg {
+        position: absolute;
+        right: 10px;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        top: 10px;
+        pointer-events: none;
+        transition: transform 0.3s ease;
+    }
+    
+    
+      
+     
+      
+      textarea {
+        resize: none;
+        height: 145px;
+      }
+      
+      .btn-submit {
+        background-color: #007bff;
+        color: #fff;
+        padding: 12px 30px;
+        border: none;
+        border-radius: 20px;
+        font-size: 16px;
+        cursor: pointer;
+        display: inline-block;
+        margin-top: 20px;
+    
+    
+      }
+      
+      .btn-submit:hover {
+        background-color: #0056b3;
+      }
+      .two-btn{
+        margin-top: 2rem;
+        display: flex;
+        gap: 30px;
+      }
+      .btn-two{
+      
+      border-radius: 30px;
+      justify-content: right;
+      align-items: center;
+      display: flex;
+      gap: 20px;
+      font-family: Inter;
+      font-weight: 600;
+      font-size: 20px;
+      border: none;
+      background-color: #F0F2F4;
+      color: black;
+      }
+      .ptag{
+        padding-left: 40px;
+      }
+      .line{
+        width: 100%;
+        margin-top: 1.5rem;
+        height: 4px;
+        background-color: white;
+      }    
