--- a/style.css
+++ b/style.css
@@ -2971,7 +2971,7 @@ color: #ffffff;
 }
 @media (max-width: 1314px) {
     .sec11-heading{
-        color: #000;
+        color: #ffffff;
         font-family: Inter;
         font-size: 66.4px;
         font-weight: 700;
