--- a/style.css
+++ b/style.css
@@ -5546,11 +5546,20 @@ margin-top: 10px;
             
         }
     }
-    /* @media (max-width:1028px) {
+    @media (max-width:1028px) {
         .social-icon {
             opacity: 1;
         }
-    } */
+        .social-icon {
+            width: 40px;
+            margin-top: 2px;
+        }
+        .main-icon {
+            width: 40px;
+            margin-top: 2px;
+        }
+       
+    }
     
     
     
