--- a/style.css
+++ b/style.css
@@ -406,19 +406,28 @@ color: white;
 }
 .creation{
 font-family: 'Inter';
-font-size: 60px;
+font-size: 100px;
 font-weight: 700;
-line-height: 70px;
+line-height: 100px;
 letter-spacing: -0.2px;
 color: #FFFFFF;
 width: 90%;
 text-align: center;
 margin-top: 2rem;
 }
+.subheading{
+    font-size: 30px;  
+    line-height: 40px;
+    color: white;
+    width: 90%;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 .big1{
-    font-size: 70px;
+    font-size: 40px;
 font-weight: 800;
-line-height: 70px;
+line-height: 40px;
 color: #00A616;
 }
 .friendly{
@@ -436,9 +445,9 @@ color: #00A616;
   .btn-two5 {
     background-color: #007bff;
     color: #fff;
-    padding: 10px;
+    padding: 20px;
     border: none;
-    border-radius: 20px;
+    border-radius: 30px;
     font-size: 16px;
     cursor: pointer;
     /* display: inline-block; */
@@ -499,12 +508,52 @@ height: 620.08px;
         width: 90%;  
     }
     .creation{
-        width: 95%; 
-        font-size: 60.8px;
-        line-height: 60.8px;
+        width: 90%; 
+        font-size: 90.8px;
+        line-height: 100.8px;
         letter-spacing: -2px;
         }
+     
+            .subheading{
+                font-size: 30px;  
+                line-height: 40px;
+                color: white;
+                width: 90%;
+                text-align: center;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+            .big1{
+                font-size: 40px;
+            font-weight: 800;
+            line-height: 40px;
+            color: #00A616;
+            }
    
+}
+@media (max-width: 956px) {
+    .creation{
+        width: 90%; 
+        font-size: 60.8px;
+        line-height: 70.8px;
+        letter-spacing: -2px;
+        }
+     
+            .subheading{
+                font-size: 30px;  
+                line-height: 40px;
+                color: white;
+                width: 90%;
+                text-align: center;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+            .big1{
+                font-size: 40px;
+            font-weight: 800;
+            line-height: 40px;
+            color: #00A616;
+            }
 }
 @media (max-width: 1028px) {
     .creation{
@@ -584,33 +633,73 @@ height: 620.08px;
         .line{
             display: none;
         }
-        .creation{
+        /* .creation{
             width: 95%; 
             font-size: 32px;
             line-height:42px;
             letter-spacing: -0px;
-            }
-            .big1{
+            } */
+            /* .big1{
                 font-size: 40px;
             font-weight: 800;
             line-height: 40px;
             color: #00A616;
+            } */
+}
+@media (max-width: 638px) {
+    .btn-two5 {
+        background-color: #007bff;
+        color: #fff;
+        padding: 15px;
+        border: none;
+        border-radius: 20px;
+        font-size: 12px;
+        cursor: pointer;
+        /* display: inline-block; */
+     
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    /* gap: 10px; */
+    
+      }
+    .creation{
+        width: 90%; 
+        font-size: 40.8px;
+        line-height: 50.8px;
+        letter-spacing: -2px;
+        }
+     
+            .subheading{
+                font-size: 25px;  
+                line-height: 35px;
+                color: white;
+                width: 90%;
+                text-align: center;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+            .big1{
+                font-size: 30px;
+            font-weight: 800;
+            line-height: 35px;
+            color: #00A616;
             }
 }
 @media (max-width: 561px) {
-    .creation{
+    /* .creation{
         width: 95%; 
         font-size: 22px;
         line-height:30px;
         letter-spacing: -0px;
-        }
-        .big1{
+        } */
+        /* .big1{
             font-size: 30px;
         font-weight: 800;
         line-height: 30px;
         color: #00A616;
         }
-    
+     */
         .friendly{
             font-size: 12.6px;
             line-height: 20.56px;
@@ -674,6 +763,30 @@ height: 620.08px;
             background-color: #0056b3;
           }
           
+}
+@media (max-width: 406px) {
+    .creation{
+        width: 90%; 
+        font-size: 25.8px;
+        line-height: 35.8px;
+        letter-spacing: -1.5px;
+        }
+     
+            .subheading{
+                font-size: 18px;  
+                line-height: 25px;
+                color: white;
+                width: 90%;
+                text-align: center;
+                margin-top: 1rem;
+                margin-bottom: 1rem;
+            }
+            .big1{
+                font-size: 20px;
+            font-weight: 800;
+            line-height: 25px;
+            color: #00A616;
+            }
 }
 @media (max-width: 386px) {
     /* .creation{
@@ -5455,19 +5568,7 @@ margin-top: 10px;
         color: #fff;
         cursor: pointer;
       }
-      .close-btn12 {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        font-size: 20px;
-        background: none;
-        border: 2px solid black;
-        color: #000000;
-        cursor: pointer;
-        justify-content: center;
-        align-items: center;
-        display: flex;
-      }
+   
       @media (max-width:553px) {
         .form-container {
             padding: 20px;
@@ -5665,30 +5766,30 @@ margin-top: 10px;
     cursor: pointer;
    
 }
-.enquiry-trigger{
+.enquiry-trigger {
     position: fixed;
     top: 45vh; /* Optional: Ensures it starts from the top of the viewport */
     right: 0px; 
     transform: translateY(-50%);
     background-color: white;
-    color: rgb(5, 14, 109);
+    color: black;
     padding: 10px 10px;
     border-radius: 10px 10px;
     writing-mode: vertical-rl;
-    /* text-orientation: upright; */
     font-family: Arial, sans-serif; /* Customize font */
     font-size: 25px; /* Adjust font size */
     font-weight: bold; /* Adjust font weight */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Optional shadow */
     cursor: pointer;
     border: none;
-    transition: all 0.3s ease;
-    border:2px solid rgb(5, 14, 109);
+
+    transition: all 0.3s ease; /* Smooth transition */
 }
+
+/* Hover effect */
 .enquiry-trigger:hover {
-    background-color: rgb(5, 14, 109);
-    color:white ;
-    border: 2px solid rgb(255, 255, 255);
+    transform: translateY(-50%) scale(1.1); /* Zoom in slightly */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* Enhance shadow for effect */
 }
 
 .state{
